argocd/apps/maildev/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maildev-http
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - maildev.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: maildev-web
          port: 1080
      matches:
        - path:
            type: PathPrefix
            value: /
